syntax = "proto3";

option csharp_namespace = "Storefront"; //TODO: if does not work, change to Storefront

package messenger;

service Messenger {
  rpc WriteMessage(WriteMessageRequest) returns (WriteMessageResponse);
  rpc GetUserMessages(GetMessageRequest) returns (stream GetMessageResponse);
  rpc EditMessage(EditMessageRequest) returns (EditMessageResponse);
  rpc DeleteMessage(DeleteMessageRequest) returns (DeleteMessageResponse);
}

message WriteMessageRequest {
  int32 requestUserId = 1;
  int32 responseUserId = 2;
  string textMessage = 3;
}
message WriteMessageResponse {
  bool isSuccessful = 1;
  string errorDescription = 2;
}

message GetMessageRequest {
  int32 requestUserId = 1;
}
message GetMessageResponse {
  string message = 1;
  string messageId = 2;
  int32 receiverId = 3;
}

message EditMessageRequest {
  string messageId = 1;
  string newMessage = 2;
}
message EditMessageResponse {
  bool isSuccessful = 1;
  string errorDescription = 2;
}

message DeleteMessageRequest {
  string messageId = 1;
}
message DeleteMessageResponse {
  bool isSuccessful = 1;
  string errorMessage = 2;
}